docs: add swaggo for all endpoints
