# internal/server/routes.go
@@ -23,10 +23,7 @@ func (s *Server) prefixedAPIs() chi.Router {
 	r := chi.NewRouter()
 
 	r.Post("/shorten", s.handlers.GenerateShortURL)
-	r.Get("/shorten", s.handlers.GetURL)
-	r.Delete("/shorten", s.handlers.DeleteURL)
-
-	r.Get("/url", s.handlers.GetURL)
+	r.Get("/url", s.handlers.GetUrl)
 	r.Delete("/url", s.handlers.DeleteURL)
 
 	return r
